@@ -1,0 +1,77 @@
+.\"Created with GNOME Manpages Editor Wizard
+.\"http://sourceforge.net/projects/gmanedit2
+.TH argparse 3 "November 30, 2017" "" "GNU argparser"
+
+.SH NAME
+argparse \- парсер аргументов командной строки
+
+.SH SYNOPSIS
+.B #include "argparser.h"
+.br
+.B OPTARG argparse (const ARGPARSE_ARG arg);
+.br
+
+.SH DESCRIPTION
+Функция \fB argparse \fP принимает в качестве аргумента структуру типа ARGPARSE_ARG, состоящую из следующих полей:
+.br
+\fB const char prefix \fP - префикс опции;
+.br
+\fB const char separator \fP - разделитель опции и значения (пробел тоже указывается);
+.br
+\fB int argc \fP - параметр argc функции main;
+.br
+\fB char **argv \fP - параметр argv функции main;
+.br
+\fB int len \fP - длина списка опций;
+.br
+\fB RETOPT opts \fP - указатель на список элементов типа OPTIONS.
+.br
+Структура OPTIONS состоит из полей:
+.br
+\fB char *options \fP - указатель на строку, содержащую имя опции. Префикс не указывается. В случае длинной опции в формате \fB --optionname \fP  и символа '-' в качестве префикса имя опции пишется \fB -optionname \fP, т.е. с одним тире;
+.br
+\fB optflag flag \fP - флаг, определяющие наличие значения у опции. Имеет возможные значения:
+.br
+\fB AP_NONE \fP - опция не имеет параметров;
+.br
+\fB AP_REQUIRED \fP - опция обязательно должна иметь параметр;
+.br
+\fB AP_OPTIONAL \fP - опция имеет необязательный параметр;
+.br
+
+.SH "EXIT STATUS"
+Подключаемый файл argparser.h определяет следующие коды ошибок (возвращаемые в поле result структуры OPTARG):
+.br
+\fB AP_ILLEGAL_USE_OPTIONS \fP - неправильное использование опций (соединение коротких и длинных опций и т.д.);
+.br
+\fB AP_MISSING_VALUE \fP - отсутствует значение опции, заданной со спецификатором AP_REQUIRED;
+.br
+\fB AP_UNKNOWN_OPTION \fP - неизвестная опция (в поле erropt структуры OPTARG помещается позиция этой опции в списке argv);
+.br
+\fB AP_MEMORY_ERROR \fP - ошибка выделения памяти;
+.br
+В случае нормального завершения работы значение result равно AP_NORMAL.
+.br
+
+.SH "RETURN VALUE"
+Возвращает структуру OPTARG, состоящую из полей:
+.br
+\fB errcode result \fP - статус завершения (см. EXIT STATUS);
+.br
+\fB int erropt \fP - дополнительная характеристика ошибки (см. EXIT STATUS);
+.br
+\fB POPTION opt \fP - указатель на связный список, содержащий найденные опции и их возможные значения. Состоит из полей:
+.br
+\fB char *option \fP - имя опции;
+.br
+\fB char *value \fP - параметр опции;
+.br
+\fB struct OPTION *next \fP - указатель на следующий элемент списка. Равен NULL для последней обнаруженной опции;
+.br
+Следующим полем структуры OPTARG является:
+.br
+\fB PARGUMENTS arg \fP - указатель на связный список аргументов (не опций).
+
+.SH "SEE ALSO"
+findopt(3), argclean(3)
+
