@@ -9,3 +9,8 @@
 	* Реализованы три флага параметров для опций - отсутствующий (NONE),
 	обязательный (REQUIRED)  и необязательный (OPTIONAL).
 	* Исправлены различные ошибки
+
+	2017-12-01 Igor Tyukalov <tyukalov@bk.ru>
+	* Добавлена man-страница для функции argparse
+	* Переименованы некоторые константы, которые могли вызвать конфликт имён.
+	* Добавлена функция findopt.
